--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 <div class="home-container">
     <h1 class="home-title">Hang Loose</h1>
-    <h3>Choose the type of break</h3>
+    <h3>Choose the type of break you want to surf</h3>
     <div class="select-form">
         <form action="/spotlist" method="GET">
             <div class="select-wrapper">
