--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
     <a href="/auth/user">{{user.username}}</a>
     <a href="/logout">Log out</a>
     {{else}}
-    <div><a href="/auth/signup">Sign Up!</a></div>
+    <div><a href="/auth/signup">Sign Up</a></div>
     <div><a href="/auth/login">Log In</a></div>
     {{/if}}
   </nav>
