--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -63,6 +63,8 @@ body {
   max-width: 80vw;
   height: 10%;
   padding: 0 10%;
+  opacity: 0.85;
+  border-radius: 5px;
 }
 
 .select-wrapper {
@@ -155,11 +157,14 @@ select:focus::-ms-value {
 .detail-container {
   margin: 0;
   margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .detail-container h1 {
   font-weight: 100;
   margin-left: 10vw;
+  margin-top: 3rem;
+  margin-bottom: 0.5rem;
 }
 
 .detail-container h2 {
@@ -168,7 +173,7 @@ select:focus::-ms-value {
 
 .detail-container h1,
 h2,
-h3 {
+h4 {
   display: inline;
 }
 
@@ -201,8 +206,8 @@ h3 {
 
 .forecast-overview {
   margin: 0 5rem;
-  margin-top: 2.5em;
   line-height: 0.35;
+  margin-top: 0.5rem;
   display: flex;
   justify-content: space-around;
   align-items: stretch;
@@ -223,6 +228,7 @@ h3 {
   margin: 0 5rem;
   display: flex;
   justify-content: space-evenly;
+  align-items: stretch;
 }
 
 #recommendation-container p {
@@ -233,19 +239,46 @@ h3 {
   color: black;
 }
 
-.ideal-condition-overview {
-  display: flex;
+.logo {
+  max-height: 10px;
+  width: auto;
+  position: center;
+  color: rgb(135, 155, 164);
 }
 
-#ideal-title {
-  margin-top: 1.75em;
+.logo img {
+  padding: 0.25rem;
+}
+
+.ideal-condition-overview {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  background-color: rgb(245, 245, 245);
+  margin: 0 5rem;
+  line-height: 0.35;
+  margin-top: 0.25rem;
+  align-items: stretch;
 }
 
 #ideal-title h3 {
   font-weight: 200;
   margin-left: 10vw;
   margin-top: 2.5em;
+  margin-bottom: 0.1em;
   font-size: 2em;
+}
+
+footer {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  text-align: center;
+  text-decoration: none;
+}
+
+footer a {
+  text-decoration: none;
+  color: rgb(34, 159, 259);
 }
 
 button span {
