--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,6 +1,6 @@
 <form action="/auth/login" method="POST" id="form-container">
     <label for="username">Username</label>
-    <input id="username" type="text" name="username" placeholder="JonSnow">
+    <input id="username" type="text" name="username" placeholder="JohnJohnFlorence">
 
     <br><br>
 
