--- a/views/auth/user.hbs
+++ b/views/auth/user.hbs
@@ -1,6 +1,6 @@
 <div class="userpage-container">
   <h1>Welcome {{result.user.username}}</h1>
-  <p>save your favourite spot</p>
+  <p>here are your favourite spots:</p>
   {{#if message}}
   <div class="error-message">{{ message }}</div>
   {{/if}}
