--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -231,6 +231,35 @@ h4 {
   margin-bottom: 0.1em;
   font-size: 2em; }
 
+#fav-image {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5em; }
+
+.favourite-title {
+  font-weight: 300;
+  font-size: 2em;
+  text-align: center;
+  color: #262626;
+  margin-top: 2rem; }
+
+.favourite-container {
+  max-width: 75vw;
+  font-weight: 200;
+  margin: 5vh 10%;
+  padding: 0 30vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #e1e1e1; }
+
+.favourite-container p a {
+  text-decoration: none;
+  color: #229fff;
+  width: 75vw;
+  font-size: 1em; }
+
 footer {
   margin-top: 3rem;
   margin-bottom: 3rem;
