--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -79,15 +79,26 @@
 
     <div id="recommendation-container">
       <div>
-        <p><img src="/images/017-hand.png" alt="Hand" width="16px"> recommended ability level: <span> {{levels}}</span>
+        <img src="/images/017-hand.png" alt="Hand" height="32" width="32px">
+        <p>
+          recommended ability level:
         </p>
+        <span>
+          {{levels}}</span>
+
       </div>
       <div>
-        <p><img src="/images/025-surfboard-3 .png" alt="Boards" width="16px"> recommended board type:
-          <span> {{boards}}</span></p>
+        <img src="/images/025-surfboard-3 .png" alt="Boards" height="32px" width="32px">
+        <p>
+          recommended board type:
+        </p>
+        <span> {{boards}}</span>
       </div>
-      <div class="logo">powered by: <img src="/images/Surfline-1894871998f31f4c9d2077d05593e635.svg" height="32px"
-          alt="Surfline-Logo">
+      <div class="logo">
+        <p>
+          powered by:
+        </p>
+        <img src="/images/Surfline-1894871998f31f4c9d2077d05593e635.svg" height="32px" alt="Surfline-Logo">
       </div>
     </div>
 
