--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -206,12 +206,17 @@ h4 {
 
 .forecast-overview {
   margin: 0 5rem;
-  line-height: 0.35;
   margin-top: 0.5rem;
   display: flex;
   justify-content: space-around;
   align-items: stretch;
   background-color: rgb(245, 245, 245);
+}
+
+.forecast-overview p {
+  margin-block-end: 0;
+  margin-block-start: 0;
+  font-size: 1vw;
 }
 
 #description-title {
@@ -239,8 +244,12 @@ h4 {
   color: black;
 }
 
+#recommendation-container div {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
-  max-height: 10px;
   width: auto;
   position: center;
   color: rgb(135, 155, 164);
@@ -248,6 +257,10 @@ h4 {
 
 .logo img {
   padding: 0.25rem;
+}
+
+.logo p {
+  width: 100px;
 }
 
 .ideal-condition-overview {
