--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -80,24 +80,16 @@
     <div id="recommendation-container">
       <div>
         <img src="/images/017-hand.png" alt="Hand" height="32" width="32px">
-        <p>
-          recommended ability level:
-        </p>
-        <span>
-          {{levels}}</span>
-
+        <p>&nbsp;recommended ability level:&nbsp;</p>
+        <span> {{levels}}</span>
       </div>
       <div>
         <img src="/images/025-surfboard-3 .png" alt="Boards" height="32px" width="32px">
-        <p>
-          recommended board type:
-        </p>
+        <p>&nbsp;recommended board type:&nbsp;</p>
         <span> {{boards}}</span>
       </div>
       <div class="logo">
-        <p>
-          powered by:
-        </p>
+        <p>powered by:</p>
         <img src="/images/Surfline-1894871998f31f4c9d2077d05593e635.svg" height="32px" alt="Surfline-Logo">
       </div>
     </div>
@@ -107,19 +99,23 @@
     </div>
     <div class="ideal-condition-overview">
       <div>
-        <p><img src="/images/kompass.png" alt="Kompass" width="16px"> <strong> Swell Direction</strong></p>
+        <img src="/images/kompass.png" alt="Kompass" width="48px">
+        <p> <strong> Swell Direction</strong></p>
         <p>{{ideal.swell}}</p>
       </div>
       <div>
-        <p><img src="/images/003-wind-1.png" alt="Wind" width="16px"> <strong> Wind</strong></p>
+        <img src="/images/003-wind-1.png" alt="Wind" width="48px">
+        <p> <strong> Wind</strong></p>
         <p>{{ideal.wind}}</p>
       </div>
       <div>
-        <p><img src="/images/019-wave-1.png" alt="Wave" width="16px"> <strong> Surf Height</strong></p>
+        <img src="/images/019-wave-1.png" alt="Wave" width="48px">
+        <p> <strong> Surf Height</strong></p>
         <p>{{ideal.size}}</p>
       </div>
       <div>
-        <p><img src="/images/tide.png" alt="Tide" width="16px"> <strong> Tide</strong></p>
+        <img src="/images/tide.png" alt="Tide" width="48px">
+        <p> <strong> Tide</strong></p>
         <p>{{ideal.tide}}</p>
       </div>
     </div>
@@ -164,6 +160,12 @@
     <a href="https://www.linkedin.com/in/konstantindauer/" target="_blank">Konstantin Dauer </a> and <a
       href="https://www.linkedin.com/in/shaulmansour/" target="_blank">Shaul Mansour</a>
     during Ironhack Bootcamp January 2020</footer>
+  <div class="references">Icons made by: <a href="https://www.flaticon.com/authors/freepik"
+      title="Freepik">Freepik,&nbsp;</a>
+    <a href="https://www.flaticon.com/authors/payungkead" title="Payungkead"
+      target="_blank">Payungkead&nbsp;and&nbsp;</a>
+    <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons" target="_blank">Those Icons</a> from <a
+      href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></div>
 </body>
 
 </html>
