--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,6 +221,9 @@ h4 {
 .logo img {
   padding: 0.25rem; }
 
+.logo p {
+  width: 100px; }
+
 .ideal-condition-overview {
   display: flex;
   justify-content: space-around;
@@ -230,6 +233,12 @@ h4 {
   line-height: 0.35;
   margin-top: 0.25rem;
   align-items: stretch; }
+
+.ideal-condition-overview div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 2vh; }
 
 #ideal-title h3 {
   font-weight: 200;
@@ -274,6 +283,15 @@ footer {
   text-decoration: none; }
 
 footer a {
+  text-decoration: none;
+  color: #229fff; }
+
+.references {
+  background-color: #e1e1e1;
+  text-align: center;
+  padding: 2vw; }
+
+.references a {
   text-decoration: none;
   color: #229fff; }
 
