--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -274,6 +274,13 @@ h4 {
   align-items: stretch;
 }
 
+.ideal-condition-overview div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 2vh;
+}
+
 #ideal-title h3 {
   font-weight: 200;
   margin-left: 10vw;
@@ -323,6 +330,17 @@ footer {
 }
 
 footer a {
+  text-decoration: none;
+  color: rgb(34, 159, 259);
+}
+
+.references {
+  background-color: rgb(225, 225, 225);
+  text-align: center;
+  padding: 2vw;
+}
+
+.references a {
   text-decoration: none;
   color: rgb(34, 159, 259);
 }
