--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -38,7 +38,7 @@
       <h1>SURF REPORT AND FORECAST </h1>
       <h2> for {{info.0.name}}</h2>
       <form id="add-favourites">
-        <button type="submit" id="favourite"></button>
+        <button type="submit" id="favourite" title="Add to your favourites"></button>
       </form>
       <h4 id="added" style="visibility: hidden">Added to Favorites!</h4>
     </div>
