--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -188,10 +188,17 @@ h4 {
   height: 32px;
   width: 32px;
   border: none;
-  transition: all ease-in-out 0.2s;
+  transition-delay: 0s !important;
+
+  // transition: all ease-in-out 0.2s;
+
   cursor: pointer;
 }
 #favourite:hover {
+  pointer-events: auto;
+  transition: all 0s 0.01s ease; /* Mouse enter: delay */
+  transition-delay: 0s !important;
+
   border: 1px solid rgb(34, 159, 259);
   background-color: rgb(34, 159, 259);
 }
